--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-DevChallenge
-Home Features Contact
-Create amazing graphics
-Colaborate and create beautiful graphics with your team
-Start now
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
