readme limpo e estrutura html criada

--- a/index.html
+++ b/index.html
@@ -1,11 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header class="header">
+      <div class="logo"><h1>selfcare</h1></div>
+      <nav class="navigation">
+        <ul>
+          <li>Search</li>
+          <li>Login</li>
+          <li>Cart</li>
+        </ul>
+      </nav>
+    </header>
+    <section class="banner">
+      <img src="#" alt="Banner SelfCare" />
+    </section>
+    <section class="products">
+      <div class="products-header">
+        <h1>Produtos</h1>
+        <p>9 produtos</p>
+      </div>
+      <div class="products">
+        <ul>
+          <li>
+            <img src="#" alt="Produto 1" />
+            <p>Lorem ipsum dolor sit</p>
+            <div class="price">R$ <span>50, 00</span></div>
+          </li>
+          <li>
+            <img src="#" alt="Produto 1" />
+            <p>Lorem ipsum dolor sit</p>
+            <div class="price">R$ <span>50, 00</span></div>
+          </li>
+          <li>
+            <img src="#" alt="Produto 1" />
+            <p>Lorem ipsum dolor sit</p>
+            <div class="price">R$ <span>50, 00</span></div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <footer>
+      <div class="footer-info">
+        <div class="footer-links">
+          <ul>
+            <li><a href="#">Contato</a></li>
+            <li><a href="#">Termos de serviço</a></li>
+            <li><a href="#">Política de privacidade</a></li>
+            <li><a href="#">Cancelamento, troca e reembolso</a></li>
+          </ul>
+        </div>
+        <div class="newsletter">
+          <input type="text" placeholder="Digite seu melhor e-mail" />
+          <button class="btn">Inscrever</button>
+        </div>
+      </div>
+      <div class="footer-extra">
+        <div class="social">
+          <ul>
+            <li>Instagram</li>
+            <li>Facebook</li>
+          </ul>
+        </div>
+        <div class="pagamento">
+          <ul>
+            <li>MasterCard</li>
+            <li>PayPal</li>
+            <li>Vista</li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
