--- a/index.html
+++ b/index.html
@@ -1,11 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="topo">
+            <span>
+                <img src="./assets/logo.png" alt="" style="width:90px">
+                <span>
+                    <img src="./assets/lupa.png" alt="" style="width:20px">
+                    <img src="./assets/user.png" alt="" style="width:20px">
+                    <img src="./assets/carrinho.png" alt="" style="width:20px;">
+                </span>
+            </span>
+        </div>
+        <div class="banner">
+            <img src="./assets/banner.png" alt="">
+        </div>
+        <br>
+        <div class="centro">
+
+            <span>
+                <ul>
+                    <li>Produtos</li>
+                    <li>9 produtos</li>
+                </ul>
+            </span>
+            <div class="artigos">
+                <article>
+                    <img src="./assets/chandra-oh-y5hRv6UNKMg-unsplash.jpg" alt="">
+                    <p>Lorem Ipsum</p>
+                    <p> R$ 50,00</p>
+                </article>
+                <article>
+                    <img src="./assets/devin-avery-BRVqq2uak4E-unsplash.jpg" alt="">
+                    <p>Lorem Ipsum</p>
+                    <p> R$ 50,00</p>
+                </article>
+
+                <article>
+                    <img src="./assets/devin-avery-bMH8ub9z1_U-unsplash.jpg" alt="">
+                    <p>Lorem Ipsum</p>
+                    <p> R$ 50,00</p>
+                </article>
+                <article>
+                    <img src="./assets/gabrielle-henderson-1DMNn6gBbwQ-unsplash.jpg" alt="">
+                    <p>Lorem Ipsum</p>
+                    <p> R$ 50,00</p>
+                </article>
+                <article>
+                    <img src="./assets/nery-montenegro-SmEty_TVr80-unsplash.jpg" alt="">
+                    <p>Lorem Ipsum</p>
+                    <p> R$ 50,00</p>
+                </article>
+                <article>
+                    <img src="./assets/olena-sergienko-GOVTETevRm8-unsplash.jpg" alt="">
+                    <p>Lorem Ipsum</p>
+                    <p> R$ 50,00</p>
+                </article>
+                <article>
+                    <img src="./assets/phaedra-botanicals-uFAHrKYkTVI-unsplash.jpg" alt="">
+                    <p>Lorem Ipsum</p>
+                    <p> R$ 50,00</p>
+                </article>
+                <article>
+                    <img src="./assets/pharma-hemp-complex-tAzdKblAinw-unsplash.jpg" alt="">
+                    <p>Lorem Ipsum</p>
+                    <p> R$ 50,00</p>
+                </article>
+                <article>
+                    <img src="./assets/pharma-hemp-complex-yVAXSK6zFIM-unsplash.jpg" alt="">
+                    <p>Lorem Ipsum</p>
+                    <p> R$ 50,00</p>
+                </article>
+            </div>
+
+        </div>
+        <div class="fl">
+            <ul>
+                <li>Contato</li>
+                <li>Termos de serviço</li>
+                <li>Política e privacidade</li>
+                <li>Cancelamento, troca ou reembolso</li>
+            </ul>
+        </div>
+        <div class="fr">
+            <form action="">
+                <label for="Newsletter">Newsletter:</label><br>
+                <input type="text" placeholder="Escreva seu melhor email">
+                <input type="button" value="Inscrever">
+            </form>
+        </div>
+
+        <div class="ffl">
+
+            <img src="./assets/insta.png" alt="" style="width:20px">
+            <img src="./assets/face.png" alt="" style="width:20px">
+        </div>
+
+
+        <div class="ffr">
+            <img src="./assets/master.png" alt="" style="width:20px">
+            <img src="./assets/pay.png" alt="" style="width:20px">
+            <img src="./assets/visa.png" alt="" style="width:56px">
+        </div>
+
+    </div>
 </body>
+
 </html>
