update files all

--- a/index.html
+++ b/index.html
@@ -1,11 +1,302 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Selfcare - Site de produtos</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 </head>
 <body>
+    <div class="header">
+        <div class="container">
+            <header class="navbar">
+                <div class="logo">
+                    <i class="fa fa-star" aria-hidden="true"><a href="index.html">selfcare</a></i>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-cart-plus" aria-hidden="true"></i></a></li>
+                    </ul>
+                </nav>
+            </header>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <img src="assets/img/00.png" alt="Banner Selfcare">
+        </div>
+    </div>
+
+    <div class="small-container">
+        <div class="row small-row">
+            <h2>promoção</h2>
+            <p>12 produtos</p>
+        </div>
+        
+        <div class="row">
+            <div class="col-4">
+                <a href="#"><img src="assets/img/01.jpg" alt=""></a>
+                <h4>Lorem ipsum, dolor sit</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                </div>
+                <p>$50.00</p>
+            </div>
+
+            <div class="col-4">
+                <a href="#"><img src="assets/img/01.jpg" alt=""></a>
+                <h4>Lorem ipsum, dolor sit</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$50.00</p>
+            </div>
+
+            <div class="col-4">
+                <a href="#"><img src="assets/img/01.jpg" alt=""></a>
+                <h4>Lorem ipsum, dolor sit</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o"></i>
+                </div>
+                <p>$50.00</p>
+            </div>
+
+            <div class="col-4">
+                <a href="#"><img src="assets/img/01.jpg" alt=""></a>
+                <h4>Lorem ipsum, dolor sit</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$50.00</p>
+            </div>
+
+            <div class="col-4">
+                <a href="#"><img src="assets/img/09.jpg" alt=""></a>
+                <h4>Lorem ipsum, dolor sit</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$50.00</p>
+            </div>
+
+            <div class="col-4">
+                <a href="#"><img src="assets/img/09.jpg" alt=""></a>
+                <h4>Lorem ipsum, dolor sit</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                </div>
+                <p>$50.00</p>
+            </div>
+
+            <div class="col-4">
+                <a href="#"><img src="assets/img/09.jpg" alt=""></a>
+                <h4>Lorem ipsum, dolor sit</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$50.00</p>
+            </div>
+
+            <div class="col-4">
+                <a href="#"><img src="assets/img/09.jpg" alt=""></a>
+                <h4>Lorem ipsum, dolor sit</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                </div>
+                <p>$50.00</p>
+            </div>
+
+            <div class="col-4">
+                <a href="#"><img src="assets/img/03.jpg" alt=""></a>
+                <h4>Lorem ipsum, dolor sit</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$50.00</p>
+            </div>
+
+            <div class="col-4">
+                <a href="#"><img src="assets/img/03.jpg" alt=""></a>
+                <h4>Lorem ipsum, dolor sit</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                </div>
+                <p>$50.00</p>
+            </div>
+
+            <div class="col-4">
+                <a href="#"><img src="assets/img/03.jpg" alt=""></a>
+                <h4>Lorem ipsum, dolor sit</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$50.00</p>
+            </div>
+
+            <div class="col-4">
+                <a href="#"><img src="assets/img/03.jpg" alt=""></a>
+                <h4>Lorem ipsum, dolor sit</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                </div>
+                <p>$50.00</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="testimonial">
+        <div class="small-container">
+            <div class="row">
+                <div class="col-3">
+                    <i class="fa fa-quote-left"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur at voluptas inventore aspernatur facere ad expedita modi laborum temporibus illum? Mollitia maxime fuga dignissimos at esse omnis amet aut dolor.</p>
+                    <div class="rating">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <img src="assets/img/user-1.png" alt="">
+                    <h3>Sean Parker</h3>
+                </div>
+                <div class="col-3">
+                    <i class="fa fa-quote-left"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur at voluptas inventore aspernatur facere ad expedita modi laborum temporibus illum? Mollitia maxime fuga dignissimos at esse omnis amet aut dolor.</p>
+                    <div class="rating">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <img src="assets/img/user-2.png" alt="">
+                    <h3>Milk Smith</h3>
+                </div>
+                <div class="col-3">
+                    <i class="fa fa-quote-left"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur at voluptas inventore aspernatur facere ad expedita modi laborum temporibus illum? Mollitia maxime fuga dignissimos at esse omnis amet aut dolor.</p>
+                    <div class="rating">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-o"></i>
+                    </div>
+                    <img src="assets/img/user-3.png" alt="">
+                    <h3>Nabel Joe</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col-1">
+                    <h3>Download Our App</h3>
+                    <p>Download App for Android and Ios mobile phone</p>
+                    <div class="app-logo">
+                        <img src="assets/img/play-store.png" alt="">
+                        <img src="assets/img/app-store.png" alt="">
+                    </div>
+                </div>
+                <div class="footer-col-3">
+                    <ul>
+                        <li>Contact</li>
+                        <li>Service terms</li>
+                        <li>Privacy Policy</li>
+                        <li>Cancellation, exchange and refund</li>
+                    </ul>
+                </div>
+                <div class="footer-col-2">
+                    <form action="#">
+                        <input type="email" name="" id="" placeholder="Enter your best email"/>
+                        <a href="#" type="button">Sign up</a>
+                    </form>
+                </div>
+            </div>
+            <hr/>
+            <div class="small-container">
+                <div class="row">
+                    <div class="col-2">
+                        <nav>
+                            <ul>
+                                <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
+                                <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="col-2">
+                        <nav>
+                            <ul>
+                                <li><i class="fa fa-cc-mastercard" aria-hidden="true"></i></li>
+                                <li><i class="fa fa-paypal" aria-hidden="true"></i></li>
+                                <li><i class="fa fa-cc-visa" aria-hidden="true"></i></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+            <p class="copyright">Copyright 2022 - Paulo Pessoa</p>
+        </div>
+    </div>
     
 </body>
 </html>
