--- a/index.html
+++ b/index.html
@@ -1,11 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
+    <title>Offer Mega-Sale</title>
+
 </head>
+
 <body>
-    
+    <div class="conteiner-menu">
+        <div class="icn-menu-estrela">
+            <img class="icn-menu-estrela" src="./icons/estrela.svg" alt="imagem de estrela">
+            <img class="icn-menu-logo" src="./icons/sua logo.svg" alt="">
+        </div>
+        <div class="conteiner-menu-icon">
+            <a href="http:./"><img src="./icons/pesquisa.svg" alt="" class="icn-pesquisa"></a>
+            <a href="./offerLogin.html"><img src="./icons/usuario.png" alt="" class="icn-usuario"></a>
+            <a href="#"><img src="./icons/carrinho.png" alt="" class="icn-carrinho"></a>
+        </div>
+    </div>
+    <img id="img-banner" src="./assets/banner.png" alt="">
+    <div class="info">
+        <p class="conteiner-info-promo">promoção</p>
+        <p class="conteiner-info-prod">9 produtos</p>
+    </div>
+    <hr>
+    <div class="conteiner-produtos">
+        <div class="produtos">
+            <img src="./assets/gabrielle-henderson-1DMNn6gBbwQ-unsplash.jpg" alt="" class="img-prod">
+            <p class="info-prod">loremipsum dolor sit</p>
+            <p class="info-preco">R$ <span>50,00</span></p>
+        </div>
+        <div class="produtos">
+            <img src="./assets/devin-avery-bMH8ub9z1_U-unsplash.jpg" alt="" class="img-prod">
+            <p class="info-prod">loremipsum dolor sit</p>
+            <p class="info-preco">R$ <span>50,00</span></p>
+        </div>
+        <div class="produtos">
+            <img src="./assets/devin-avery-BRVqq2uak4E-unsplash.jpg" alt="" class="img-prod">
+            <p class="info-prod">loremipsum dolor sit</p>
+            <p class="info-preco">R$ <span>50,00</span></p>
+        </div>
+        <div class="produtos">
+            <img src="./assets/nery-montenegro-SmEty_TVr80-unsplash.jpg" alt="" class="img-prod">
+            <p class="info-prod">loremipsum dolor sit</p>
+            <p class="info-preco">R$ <span>50,00</span></p>
+        </div>
+        <div class="produtos">
+            <img src="./assets/olena-sergienko-GOVTETevRm8-unsplash.jpg" alt="" class="img-prod">
+            <p class="info-prod">loremipsum dolor sit</p>
+            <p class="info-preco">R$ <span>50,00</span></p>
+        </div>
+        <div class="produtos">
+            <img src="./assets/pharma-hemp-complex-tAzdKblAinw-unsplash.jpg" alt="" class="img-prod">
+            <p class="info-prod">loremipsum dolor sit</p>
+            <p class="info-preco">R$ <span>50,00</span></p>
+        </div>
+        <div class="produtos">
+            <img src="./assets/phaedra-botanicals-uFAHrKYkTVI-unsplash.jpg" alt="" class="img-prod">
+            <p class="info-prod">loremipsum dolor sit</p>
+            <p class="info-preco">R$ <span>50,00</span></p>
+        </div>
+        <div class="produtos">
+            <img src="./assets/pharma-hemp-complex-yVAXSK6zFIM-unsplash.jpg" alt="" class="img-prod">
+            <p class="info-prod">loremipsum dolor sit</p>
+            <p class="info-preco">R$ <span>50,00</span></p>
+        </div>
+        <div class="produtos">
+            <img src="./assets/chandra-oh-y5hRv6UNKMg-unsplash.jpg" alt="" class="img-prod">
+            <p class="info-prod">loremipsum dolor sit</p>
+            <p class="info-preco">R$ <span>50,00</span></p>
+        </div>
+    </div>
+    <hr>
+    <footer>
+        <div class="conteiner-footer">
+            <div class="info-footer">
+                <ul>
+                    <li><a href="#">Contato</a></li>
+                    <li><a href="#">Termos e Serviços</a></li>
+                    <li><a href="#">Politica de privacidade</a></li>
+                    <li><a href="#">Cancelamento, troca e reeembolso</a></li>
+                </ul>
+            </div>
+            <div class="footer-email">
+                <span>Newsletter</span>
+                <div class="footer-email-button">
+                    <input type="text" placeholder="Digite o seu melhor e-mail">
+                    <a class="botao-footer" href="#">Inscrever</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    </div>
 </body>
+
 </html>
